# PythonScripts

./: ##poi.txt  #bastel.py  .gitignore  5thGtade.py  61111-0002_de.csv  Collatz.py  WMTSList.xml  a mac is not a pc.py  allFailedTests.txt  animate_bubble_sort.py  animations.py  ants.py  apertureSteps.py  ausgleich.py  basemap_glyphs.json  bezier.py  bm_web_col.json  cache.py  capture_closure.py  certs.py  checkStyle.py  check_wmts_file.py  cubic.py  dataclass_how_it_works.py  deleteLRBackups.py  delete_easymap_cache.py  delete_old_LR_backups.py  dist.py  dobble.py  dumpTile.py  dump_all_text_infos_from_style.py  einmaleins.py  encodingDemo.py  endlessWrite.py  failingTests.py  fibu.py  findInTimes.py  find_double_files.py  find_doubles.py  find_xmp_only.py  (+48 more)
.github/: copilot-instructions.md
.github/workflows/: python-code-quality.yml
bilderKram/: empty_folders.py  find_Conseq.py  find_doubles.py  find_xmp_only.py  group_files_by_stem.py  image_Tool.py  list_stems_and_sizes.py
bilderKram/double_finder/: cache.py  (+1 more)
double_finder/: __init__.py  cache.py  find_double_files.py
geocoder_tests/: failed_singleline.xml  list_bugs.py  tests.xml
gitkram/: checkUnmerged.py  pyproject.toml
stylesToTest/: 1.json  2.json  at_root.json  bm_web_col.json  bm_web_gry.json  bm_web_top.json  bm_web_wld_3857.json  compareStyles.py  download_style.py  filterAllLoadedAllStyles.py  filterAllLoaderAllStyles.py  find_words_no_numbers.py  loadAllStyles.py  swiss_basemap.json  swiss_imagery_basemap.json  swiss_light_basemap.json  swiss_light_basemap_3.json  update_styles.py
(+10 files in other folders)
