[tool.poetry]
name = "pythonscripts"
version = "0.1.0"
description = ""
authors = ["Matthias Henning <henning@geomarketing.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.8"
ruff = "^0.3.4"
mapbox-vector-tile = "^2.1.0"
pyfiglet = "^1.0.2"
inflect = "^7.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
