[tool.poetry]
name = "pythonscripts"
version = "0.1.0"
description = ""
authors = ["Matthias Henning <henning@geomarketing.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.8"
ruff = "^0.3.4"
mapbox-vector-tile = "^2.1.0"
pyfiglet = "^1.0.2"
inflect = "^7.5.0"
geopy = "^2.4.1"
sympy = "^1.13.3"
pygame = "^2.6.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
